@@ -7,8 +7,7 @@ lib_LTLIBRARIES = libbml.la
 INCLUDES = \
 	-I$(top_srcdir)/dllwrapper1/wine \
 	-I$(top_srcdir)/src/BuzzMachineLoader \
-	-I$(top_srcdir)/src \
-	$(BML_CFLAGS)
+	-I$(top_srcdir)/src
 
 libbmldir = $(includedir)/libbml
 libbml_la_SOURCES = bml.c
@@ -24,7 +23,7 @@ libbml_la_LIBADD = $(BASE_DEPS_LIBS) \
 	$(top_builddir)/dllwrapper2/libloader.la
 endif
 
-libbml_la_CFLAGS = $(BML_CFLAGS)
+libbml_la_CFLAGS = $(BML_CFLAGS) $(ARCH_CFLAGS)
 libbml_la_LDFLAGS = -lm -lpthread -ldl
 
 bin_PROGRAMS=bmltest_info bmltest_process
@@ -32,10 +31,12 @@ bin_PROGRAMS=bmltest_info bmltest_process
 bmltest_info_SOURCES= bmltest_info.c
 bmltest_info_LDADD = $(BASE_DEPS_LIBS) -ldl \
 	$(top_builddir)/src/libbml.la
+bmltest_info_CFLAGS = $(BML_CFLAGS) $(ARCH_CFLAGS)
 
 bmltest_process_SOURCES= bmltest_process.c
 bmltest_process_LDADD = $(BASE_DEPS_LIBS) -ldl \
 	$(top_builddir)/src/libbml.la
+bmltest_process_CFLAGS = $(BML_CFLAGS) $(ARCH_CFLAGS)
 
 dlldir = $(libdir)
 dll_DATA = BuzzMachineLoader.dll
